<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_gravity="center">

                    <com.example.develandootask.app.view.CircleImageView
                        android:id="@+id/details_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ProgressBar
                        android:id="@+id/details_progress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </FrameLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_50"
                    android:gravity="start"
                    android:padding="8dp"
                    android:text="@string/title_user_info"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_nat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_loc_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_50"
                    android:gravity="start"
                    android:padding="8dp"
                    android:text="@string/title_location"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_loc_street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_loc_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_loc_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_loc_postcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/details_coord_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/details_coord_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white_50"
                        android:gravity="start"
                        android:padding="8dp"
                        android:text="@string/title_coordinates"
                        android:textColor="@color/white" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/details_loc_coord_lat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/details_loc_coord_lon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/details_zone_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/details_zone_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white_50"
                        android:gravity="start"
                        android:padding="8dp"
                        android:text="@string/title_zone"
                        android:textColor="@color/white" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/details_loc_zone_offset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/details_loc_zone_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_login_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_50"
                    android:gravity="start"
                    android:padding="8dp"
                    android:text="@string/title_login"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_login_uuid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_login_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_login_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_login_salt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_login_md5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_login_sha1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_login_sha256"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_dob_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_dob_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_50"
                    android:gravity="start"
                    android:padding="8dp"
                    android:text="@string/title_dob"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_dob_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_dob_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_reg_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_reg_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_50"
                    android:gravity="start"
                    android:padding="8dp"
                    android:text="@string/title_registered"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_reg_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_reg_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_id_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_id_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_50"
                    android:gravity="start"
                    android:padding="8dp"
                    android:text="@string/title_id"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_id_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/details_id_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>